[package]
name = "vti-push-gateway"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
description = "Push wake-up gateway for the OpenVTC mobile authenticator. Holds the app's platform push credentials, issues opaque wake handles, enforces a VTA-provisioned trigger allowlist, and relays contentless wake notifications. Implements https://trusttasks.org/binding/push/0.1."
repository = "https://github.com/OpenVTC/vti-push-gateway"
rust-version = "1.85"

[dependencies]
# HTTP surface (the REST gateway transport of the push binding). axum/tower
# mirror the trust-tasks-https binding's server stack.
axum = "0.8"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "net", "signal"] }
tower-http = { version = "0.6", features = ["trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = "2"
# Trigger / provision authentication: callers sign the request body with their
# did:key Ed25519 key; the gateway resolves the did:key offline and verifies.
ed25519-dalek = "2"
bs58 = "0.5"
base64 = "0.22"
# Opaque handle generation (CSPRNG).
rand = "0.8"
# Canonical Trust Task envelope + the push/* payload types (the gateway's
# control plane is the push/* Trust Task family). The gateway dispatches
# push/register|provision|wake documents over HTTPS (and, next, DIDComm).
trust-tasks-rs = { version = "0.1", default-features = false }
# Response document ids (urn:uuid).
uuid = { version = "1", features = ["v4"] }
# DIDComm server transport (the preferred transport). Mirrors vta-service:
# DIDCommService + Router host that does server-side unpack + sender-auth; the
# gateway provides its provisioned did:webvh identity secrets + a Router of
# push/* handlers that call the shared dispatch_push core.
affinidi-messaging-didcomm-service = "0.3"
affinidi-tdk = "0.7"
affinidi-secrets-resolver = "0.5"
affinidi-did-resolver-cache-sdk = { version = "0.8", features = ["network"] }
tokio-util = "0.7"
# Async push senders (real delivery — Web Push / APNs — is async HTTP).
async-trait = "0.1"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
